Generator training complete, adding the steps for synthetic dataset generation and saving the trained generator

--- a/DataAugmentationConditionalGan/notebooks/DataAugmentationCGan.ipynb
+++ b/DataAugmentationConditionalGan/notebooks/DataAugmentationCGan.ipynb
@@ -27,20 +27,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "33cb8ceb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape of training images: (50000, 32, 32, 3)\n",
-      "Shape of training labels: (50000, 1)\n",
-      " No GPU found. TensorFlow will use the CPU.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -82,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "50b2bdf8",
    "metadata": {},
    "outputs": [],
@@ -144,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "27cfec2e",
    "metadata": {},
    "outputs": [],
@@ -191,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "5222d35f",
    "metadata": {},
    "outputs": [],
@@ -350,7 +340,85 @@
     "train_dataset = tf.data.Dataset.from_tensor_slices((x_train, y_train)).batch(BATCH_SIZE)\n",
     "\n",
     "# The .fit() method will now handle the entire training loop for you!\n",
-    "wgan.fit(train_dataset, epochs=EPOCHS, callbacks=[sampler_callback])"
+    "#wgan.fit(train_dataset, epochs=EPOCHS, callbacks=[sampler_callback])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac2b4986",
+   "metadata": {},
+   "source": [
+    "#### Model training is now complete. In this step, we will generate images (50000) which is the same size as the original _CIFAR10_ Dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc829bea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Generating the Final Synthetic Dataset ---\n",
+    "\n",
+    "NUM_IMAGES_TO_GENERATE = 50000\n",
+    "BATCH_SIZE = 128 # Generate in batches to avoid memory issues\n",
+    "\n",
+    "print(\"Generating synthetic dataset...\")\n",
+    "\n",
+    "# Prepare arrays to hold the generated images and labels\n",
+    "synthetic_images = np.zeros((NUM_IMAGES_TO_GENERATE, 32, 32, 3))\n",
+    "synthetic_labels = np.zeros((NUM_IMAGES_TO_GENERATE, 1))\n",
+    "\n",
+    "for i in range(0, NUM_IMAGES_TO_GENERATE, BATCH_SIZE):\n",
+    "    # Define the batch size for this iteration (handles the final, smaller batch)\n",
+    "    current_batch_size = min(BATCH_SIZE, NUM_IMAGES_TO_GENERATE - i)\n",
+    "    \n",
+    "    # Generate random noise\n",
+    "    noise = tf.random.normal(shape=(current_batch_size, LATENT_DIM))\n",
+    "    \n",
+    "    # Generate random labels for the desired classes\n",
+    "    sampled_labels = np.random.randint(0, NUM_CLASSES, current_batch_size).reshape(-1, 1)\n",
+    "    \n",
+    "    # Generate a batch of images\n",
+    "    gen_imgs = generator.predict([noise, tf.constant(sampled_labels)])\n",
+    "    \n",
+    "    # Store the generated images and labels\n",
+    "    synthetic_images[i : i + current_batch_size] = gen_imgs\n",
+    "    synthetic_labels[i : i + current_batch_size] = sampled_labels\n",
+    "    \n",
+    "    if (i + BATCH_SIZE) % 1000 < BATCH_SIZE:\n",
+    "        print(f\"Generated {i + current_batch_size}/{NUM_IMAGES_TO_GENERATE} images...\")\n",
+    "\n",
+    "print(\"\\nSynthetic dataset generation complete!\")\n",
+    "print(\"Shape of synthetic images:\", synthetic_images.shape)\n",
+    "print(\"Shape of synthetic labels:\", synthetic_labels.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e7db7a2",
+   "metadata": {},
+   "source": [
+    "#### Saving the trained Generator "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f52c8e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Save the Trained Generator Model ---\n",
+    "\n",
+    "# Define the file path for the saved model\n",
+    "generator_save_path = 'cifar10_cgan_generator.keras'\n",
+    "\n",
+    "# Save the generator model\n",
+    "# This saves the architecture, weights, and optimizer state.\n",
+    "wgan.generator.save(generator_save_path)\n",
+    "\n",
+    "print(f\"Generator model saved to: {generator_save_path}\")"
    ]
   }
  ],
